@@ -2,5 +2,6 @@
 * Better keyboard preview when selecting addons (themes, language, etc.).
 * Now tells you about clipboard copy.
 * A few bug fixes here and there.
+* Localization update: FR, SL.
 
 More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestones/1.8-r2
